--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
@@ -43,8 +43,8 @@
         <fa-icon *ngIf="importedSortOrder.econ == sortOrder" [icon]="getSortClass(importedSortOrder.econ)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.innings)" class="btn btn-link">Innings
-        <fa-icon *ngIf="importedSortOrder.innings == sortOrder" [icon]="getSortClass(importedSortOrder.innings)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.inningsNumber)" class="btn btn-link">Innings
+        <fa-icon *ngIf="importedSortOrder.inningsNumber == sortOrder" [icon]="getSortClass(importedSortOrder.inningsNumber)"></fa-icon></a>
     </th>
     <th class="minwidth15"></th>
     <th class="text-left">
@@ -70,7 +70,7 @@
     <td class="text-right" nowrap="nowrap">{{row.playerMaidens == null || row.playerMaidens == 0 ? "-" : row.playerMaidens}}</td>
     <td class="text-right" nowrap="nowrap">{{row.playerRuns}}</td>
     <td class="text-right" nowrap="nowrap">{{row.playerWickets}}</td>
-    <td class="text-right" nowrap="nowrap">{{getEcon(row.playerRuns, row.playerBalls)}}</td>
+    <td class="text-right" nowrap="nowrap">{{row.econ}}</td>
     <td class="text-right" nowrap="nowrap">{{row.inningsNumber}}</td>
     <td></td>
     <td class="text-left" nowrap="nowrap">{{row.opponents}}</td>
