--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/search-header/search-header.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/search-header/search-header.component.html
@@ -9,6 +9,7 @@
   </select>
 </div>
 <div [formGroup]="parentFormGroup" id="pageSizeContainer">
+  Page Size:
   <select name="pageSize" id="pageSize" formControlName="pageSize">
     <option value="50">50</option>
     <option value="100">100</option>
