Updated design and colors to follow ACS design

--- a/AcsStatsWeb/ClientApp/src/app/app.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/app.component.html
@@ -1,19 +1,16 @@
-<body>
+<app-header></app-header>
 <app-nav-menu></app-nav-menu>
-<div class="container">
-  <main role="main" class="pb-3">
-    <div class="scorecard-container">
-      <div class="sidebar">
-
-      </div>
-      <div class="scorecard-main">
-        <router-outlet></router-outlet>
-      </div>
-      <div class="sidebar">
-
-      </div>
+<main role="main" class="pb-3">
+  <div class="scorecard-container">
+    <div class="sidebar">
 
     </div>
-  </main>
-</div>
-</body>
+    <div class="scorecard-main">
+      <router-outlet></router-outlet>
+    </div>
+<!--    <div class="sidebar">-->
+
+<!--    </div>-->
+
+  </div>
+</main>
