--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-header/records-header.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-header/records-header.component.html
@@ -1,20 +1,20 @@
 <div class="header">
-  <div class="{{battingClass}}">
+  <div class="{{battingClass}} headerItem">
     <a class="btn" [routerLink]="['/records/batting']">Batting</a>
   </div>
-  <div class="{{bowlingClass}}">
+  <div class="{{bowlingClass}} headerItem">
     <a class="btn" [routerLink]="['/records/bowling']">Bowling</a>
   </div>
-  <div class="{{fieldingClass}}">
+  <div class="{{fieldingClass}} headerItem">
     <a class="btn">Fielding</a>
   </div>
-  <div class="{{teamClass}}">
+  <div class="{{teamClass}} headerItem">
     <a class="btn">Team</a>
   </div>
-  <div class="{{partnershipClass}}">
+  <div class="{{partnershipClass}} headerItem">
     <a class="btn">Partnerships</a>
   </div>
-  <div class="{{umpiresClass}}">
+  <div class="{{umpiresClass}} headerItem">
     <a class="btn">Umpires</a>
   </div>
 </div>
