--- a/AcsStatsWeb/ClientApp/src/styles.css
+++ b/AcsStatsWeb/ClientApp/src/styles.css
@@ -27,15 +27,26 @@ a {
 /* Sticky footer styles
 -------------------------------------------------- */
 body {
-  font-size: 11.5px;
+  /*font-size: 16px;*/
   font-family: Tahoma, Geneva, Arial, "Arial Narrow", Verdana, sans-serif;
   font-weight: 400;
   background-color: rgb(246, 247, 248);
 }
 
+app-root {
+  display: grid;
+  grid-template-columns: repeat(12, auto);
+}
+
+app-root > app-header, app-root > app-nav-menu, app-root > main {
+  grid-column-start: 1;
+  grid-column-end: -1;
+}
+
+
 @media (min-width: 768px) {
   html {
-    font-size: 11px;
+    /*font-size: 16px;*/
   }
 }
 
@@ -136,6 +147,9 @@ input[type=checkbox], input[type=radio] {
   display: grid;
   grid-template-columns: [first] 15rem auto 15rem;
   column-gap: 1rem;
+  grid-column-start: 1;
+  grid-column-end: -1;
+  font-size: 0.8rem;
 }
 
 
@@ -278,27 +292,28 @@ form > div:nth-child(1) > span > label, div:nth-child(2) > span > label {
 
 #overall > table > thead > tr,
 #batting > section > table > thead > tr,
-#bowling > section > table > thead > tr
-{
+#bowling > section > table > thead > tr {
   border-bottom: solid 1px lightgray;
   height: 2.5rem;
 }
 
 #batting > section > table > tbody > tr.matchRow,
-#bowling > section > table > tbody > tr.matchRow
-{
+#bowling > section > table > tbody > tr.matchRow {
   border-top: solid 2px darkgray;
 }
 
 #overall > table > thead > tr > td,
 #overall > table > tbody > tr > td,
 #batting > section > table > thead > tr > td,
-#bowling > section > table > thead > tr > td
-{
+#bowling > section > table > thead > tr > td {
   width: 5rem;
   text-align: left;
 }
 
+
+#startdateid, #enddateid {
+  font-size: 0.85rem;
+}
 
 #overall > table > thead > tr > td.teamname,
 #overall > table > tbody > tr > td.teamname,
@@ -313,8 +328,7 @@ form > div:nth-child(1) > span > label, div:nth-child(2) > span > label {
 #bowling > section > table > thead > tr > td.opponents,
 #bowling > section > table > tbody > tr > td.opponents,
 #bowling > section > table > thead > tr > td.startDate,
-#bowling > section > table > tbody > tr > td.startDate
-{
+#bowling > section > table > tbody > tr > td.startDate {
   width: 15rem;
 }
 
@@ -329,32 +343,29 @@ form > div:nth-child(1) > span > label, div:nth-child(2) > span > label {
 #bowling > section > table > thead > tr > td.dismissal,
 #bowling > section > table > tbody > tr > td.dismissal,
 #bowling > section > table > thead > tr > td.score,
-#bowling > section > table > tbody > tr > td.score
-{
+#bowling > section > table > tbody > tr > td.score {
   padding-left: 1.5rem;
 }
 
 #batting > section > table > thead > tr > td.score,
 #batting > section > table > tbody > tr > td.score,
 #bowling > section > table > thead > tr > td.score,
-#bowling > section > table > tbody > tr > td.score
-{
+#bowling > section > table > tbody > tr > td.score {
   font-weight: bold;
 }
 
 #batting > section > table > thead > tr > td.dismissal,
 #batting > section > table > tbody > tr > td.dismissal,
 #bowling > section > table > thead > tr > td.dismissal,
-#bowling > section > table > tbody > tr > td.dismissal
-{
+#bowling > section > table > tbody > tr > td.dismissal {
   width: 20rem;
 }
 
 #batting > section > table > thead > tr > td.ground,
 #batting > section > table > tbody > tr > td.ground,
 #bowling > section > table > thead > tr > td.ground,
-#bowling > section > table > tbody > tr > td.ground
-{  width: 30rem;
+#bowling > section > table > tbody > tr > td.ground {
+  width: 30rem;
   padding-left: 2rem;
 }
 
@@ -363,8 +374,7 @@ form > div:nth-child(1) > span > label, div:nth-child(2) > span > label {
 #batting > section > table > thead > tr > td.matchType,
 #batting > section > table > tbody > tr > td.matchType,
 #bowling > section > table > thead > tr > td.matchType,
-#bowling > section > table > tbody > tr > td.matchType
-{
+#bowling > section > table > tbody > tr > td.matchType {
   width: 12rem;
   padding-left: 1rem;
 }
@@ -469,5 +479,16 @@ section.searchResultHeader span {
   grid: auto-flow min-content/repeat(4, 1fr);
   gap: 1rem;
   row-gap: 1.5rem;
+}
+
+
+.bg-brand-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(33, 97, 42, var(--tw-bg-opacity));
+}
+
+.bg-brand-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(25, 73, 32, var(--tw-bg-opacity));
 }
 
