Updated default match type to 'itt'

--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
@@ -3,12 +3,14 @@
   <div class="bowling-record">
     <div class="selectrow" id="bowling-record-select">
       <select name="matchType" id="matchType" formControlName="matchType">
-        <option value="wt">Women's Tests</option>
-        <option value="wo">Women's ODI</option>
+        <option value="itt">International T20</option>
+        <option value="tt">T20</option>
         <option value="witt">Women's International T20</option>
-        <option value="wf">Women's FC</option>
-        <option value="wa">Women's List A</option>
         <option value="wtt">Women's T20</option>
+        <!--    <option value="wt">Women's Tests</option>-->
+        <!--    <option value="wo">Women's ODI</option>-->
+        <!--    <option value="wf">Women's FC</option>-->
+        <!--    <option value="wa">Women's List A</option>-->
       </select>
     </div>
     <div class="selectrow" id="bowling-record-limit">Runs limit here as well</div>
