--- a/AcsStatsWeb/ClientApp/src/app/modules/scorecard/components/scorecard-search/scorecardsearch.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/scorecard/components/scorecard-search/scorecardsearch.component.html
@@ -65,13 +65,15 @@
       <div>
         <label for="matchType">Match Type</label>
 
-        <select id="matchType" name="matchType" formControlName="matchType">
-          <option value="wt">Test</option>
-          <option value="wf">First Class</option>
-          <option value="wo">One Day International</option>
-          <option value="wa">List A</option>
-          <option value="wtt">T20</option>
-          <option value="witt">International T20</option>
+        <select name="matchType" id="matchType" formControlName="matchType">
+          <option value="itt">International T20</option>
+          <option value="tt">T20</option>
+          <option value="witt">Women's International T20</option>
+          <option value="wtt">Women's T20</option>
+          <!--    <option value="wt">Women's Tests</option>-->
+          <!--    <option value="wo">Women's ODI</option>-->
+          <!--    <option value="wf">Women's FC</option>-->
+          <!--    <option value="wa">Women's List A</option>-->
         </select>
       </div>
       <div>
