Changed database to support match sub types such as wctt, hund etc
Added a GroundsMatchSubType  to allow selecting grounds for tournaments
Took the match subtype from the grounds table as it is no longer needed
Updated the sprocs to also query for the tournament type

--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
@@ -1,7 +1,7 @@
 <app-records-header name="batting"></app-records-header>
 <form (ngSubmit)="find()" [formGroup]="battingRecordsForm">
   <div class="batting-record">
-    <app-search-header class="selectrow app-search" [parentFormGroup]="battingRecordsForm"></app-search-header>
+    <app-search-header class="selectrow app-search" [parentFormGroup]="battingRecordsForm" [matchSubTypes$]="matchSubTypes$"></app-search-header>
     <div class="selectrow" id="batting-record-limit">Runs limit here as well</div>
     <div class="teamrow" id="batting-record-team-label">
       Team
@@ -178,4 +178,3 @@
     </div>
   </div>
 </form>
-
