--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
@@ -174,7 +174,7 @@
       <input type="submit" name="submit" id="submit"/>
     </div>
     <div class="buttons" id="buttons-reset">
-      <input type="button" name="reset" id="reset" value="Reset"/>
+      <input type="button" name="reset" id="reset" value="Reset" (click)="reset()" />
     </div>
   </div>
 </form>
