--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/search-header/search-header.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/search-header/search-header.component.html
@@ -16,7 +16,7 @@
   </select>
 </div>
 <div [formGroup]="parentFormGroup" id="pageSizeContainer">
-  Page Size:
+  <label for="pageSize">Page Size</label>
   <select name="pageSize" id="pageSize" formControlName="pageSize">
     <option value="50">50</option>
     <option value="100">100</option>
