--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/ground-averages/ground-averages.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/ground-averages/ground-averages.component.html
@@ -11,7 +11,9 @@
   <thead class="thead-dark">
   <tr>
     <th class="text-left">
-      <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
+        <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon>
+      </a>
     </th>
     <th>
       <a (click)="sort(importedSortOrder.team)" class="btn text-left">Team
@@ -20,47 +22,86 @@
     </th>
     <th>
       <a (click)="sort(importedSortOrder.ground)" class="btn text-left">Ground
-        <fa-icon *ngIf="importedSortOrder.ground == sortOrder" [icon]="getSortClass(importedSortOrder.ground)"></fa-icon>
+        <fa-icon *ngIf="importedSortOrder.ground == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.ground)"></fa-icon>
       </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.matches)" class="btn btn-link">M <fa-icon *ngIf="importedSortOrder.matches == sortOrder" [icon]="getSortClass(importedSortOrder.matches)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.matches)" class="btn btn-link">M
+        <fa-icon *ngIf="importedSortOrder.matches == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.matches)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.innings)" class="btn btn-link">I <fa-icon *ngIf="importedSortOrder.innings == sortOrder" [icon]="getSortClass(importedSortOrder.innings)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.innings)" class="btn btn-link">I
+        <fa-icon *ngIf="importedSortOrder.innings == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.innings)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.notOuts)" class="btn btn-link">NOs <fa-icon *ngIf="importedSortOrder.notOuts == sortOrder" [icon]="getSortClass(importedSortOrder.notOuts)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.notOuts)" class="btn btn-link">NOs
+        <fa-icon *ngIf="importedSortOrder.notOuts == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.notOuts)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.runs)" class="btn btn-link">Runs <fa-icon *ngIf="importedSortOrder.runs == sortOrder" [icon]="getSortClass(importedSortOrder.runs)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.runs)" class="btn btn-link">Runs
+        <fa-icon *ngIf="importedSortOrder.runs == sortOrder" [icon]="getSortClass(importedSortOrder.runs)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.hs)" class="btn btn-link">HS <fa-icon *ngIf="importedSortOrder.hs == sortOrder" [icon]="getSortClass(importedSortOrder.hs)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.hs)" class="btn btn-link">HS
+        <fa-icon *ngIf="importedSortOrder.hs == sortOrder" [icon]="getSortClass(importedSortOrder.hs)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.avg)" class="btn btn-link">Avg <fa-icon *ngIf="importedSortOrder.avg == sortOrder" [icon]="getSortClass(importedSortOrder.avg)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.avg)" class="btn btn-link">Avg
+        <fa-icon *ngIf="importedSortOrder.avg == sortOrder" [icon]="getSortClass(importedSortOrder.avg)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.hundreds)" class="btn btn-link">100s <fa-icon *ngIf="importedSortOrder.hundreds == sortOrder" [icon]="getSortClass(importedSortOrder.hundreds)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.hundreds)" class="btn btn-link">100s
+        <fa-icon *ngIf="importedSortOrder.hundreds == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.hundreds)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.fifties)" class="btn btn-link">50s <fa-icon *ngIf="importedSortOrder.fifties == sortOrder" [icon]="getSortClass(importedSortOrder.fifties)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.fifties)" class="btn btn-link">50s
+        <fa-icon *ngIf="importedSortOrder.fifties == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.fifties)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.ducks)" class="btn btn-link">0s <fa-icon *ngIf="importedSortOrder.ducks == sortOrder" [icon]="getSortClass(importedSortOrder.ducks)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.ducks)" class="btn btn-link">0s
+        <fa-icon *ngIf="importedSortOrder.ducks == sortOrder" [icon]="getSortClass(importedSortOrder.ducks)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.fours)" class="btn btn-link">4s <fa-icon *ngIf="importedSortOrder.fours == sortOrder" [icon]="getSortClass(importedSortOrder.fours)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.fours)" class="btn btn-link">4s
+        <fa-icon *ngIf="importedSortOrder.fours == sortOrder" [icon]="getSortClass(importedSortOrder.fours)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.sixes)" class="btn btn-link">6s <fa-icon *ngIf="importedSortOrder.sixes == sortOrder" [icon]="getSortClass(importedSortOrder.sixes)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.sixes)" class="btn btn-link">6s
+        <fa-icon *ngIf="importedSortOrder.sixes == sortOrder" [icon]="getSortClass(importedSortOrder.sixes)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.balls)" class="btn btn-link">Balls <fa-icon *ngIf="importedSortOrder.balls == sortOrder" [icon]="getSortClass(importedSortOrder.balls)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.balls)" class="btn btn-link">Balls
+        <fa-icon *ngIf="importedSortOrder.balls == sortOrder" [icon]="getSortClass(importedSortOrder.balls)"></fa-icon>
+      </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.strikeRate)" class="btn btn-link">SR <fa-icon *ngIf="importedSortOrder.strikeRate == sortOrder" [icon]="getSortClass(importedSortOrder.strikeRate)"></fa-icon></a>
+      <a (click)="sort(importedSortOrder.strikeRate)" class="btn btn-link">SR
+        <fa-icon *ngIf="importedSortOrder.strikeRate == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.strikeRate)"></fa-icon>
+      </a>
+    </th>
+    <th class="text-right">
+      <a (click)="sort(importedSortOrder.battingImpact)" class="btn btn-link">BI
+        <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
+      </a>
     </th>
   </tr>
   </thead>
@@ -69,7 +110,7 @@
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
     <td class="text-left" nowrap="nowrap">{{row.team}}</td>
     <td class="text-left maxWidth50" nowrap="nowrap">
-      <span class="text-left maxWidth50"  style="display: inline-block">{{row.ground}}</span>
+      <span class="text-left maxWidth50" style="display: inline-block">{{row.ground}}</span>
     </td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
@@ -83,9 +124,12 @@
     <td class="text-right" nowrap="nowrap">{{row.fours == 0 ? "-" : row.fours}}</td>
     <td class="text-right" nowrap="nowrap">{{row.sixes == 0 ? "-" : row.sixes}}</td>
     <td class="text-right" nowrap="nowrap">{{row.balls == 0 ? "-" : row.balls}}</td>
-    <td class="text-right" nowrap="nowrap">{{getStrikeRate(row.runs, row.balls)}}</td>
+    <td class="text-right" nowrap="nowrap">{{row.sr.toFixed(2)}}</td>
+    <td class="text-right" nowrap="nowrap">{{row.bi.toFixed(2)}}</td>
   </tr>
   </tbody>
 </table>
 
-<app-paging [pageSize]="pageSize"  [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)" (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)" (goto)="navigate($event)"></app-paging>
+<app-paging [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)"
+            (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+            (goto)="navigate($event)"></app-paging>
